--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,5 +1,4 @@
 name: Playwright Tests
-
 on:
   push:
     branches: [ main, master ]
@@ -9,29 +8,44 @@ on:
 jobs:
   test:
     timeout-minutes: 60
-    runs-on: windows-latest  # Specify Windows environment
-    steps:
-    - name: Checkout Code
-      uses: actions/checkout@v4
+    runs-on: ubuntu-latest
 
-    - name: Setup Node.js
-      uses: actions/setup-node@v4
+    steps:
+    - uses: actions/checkout@v4
+    - uses: actions/setup-node@v4
       with:
         node-version: lts/*
 
-    - name: Install Dependencies
+    - name: Install dependencies
       run: npm ci
 
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps
 
-    - name: Run Playwright Tests
+    - name: Run Playwright tests
       run: npx playwright test
 
     - name: Upload Playwright Report
-      if: ${{ !cancelled() }}
       uses: actions/upload-artifact@v4
+      if: ${{ !cancelled() }}
       with:
         name: playwright-report
         path: playwright-report/
         retention-days: 30
+
+    - name: Send Email with Playwright Report
+      uses: dawidd6/action-send-mail@v3
+      with:
+        server_address: smtp.gmail.com
+        server_port: 587
+        username: ${{ secrets.EMAIL_USERNAME }}
+        password: ${{ secrets.EMAIL_PASSWORD }}
+        subject: Playwright Test Report
+        to: ${{ secrets.EMAIL_USERNAME }}
+        from: sender@example.com
+        # content_type: text/html
+        body: |
+          <h3>Playwright Test Report</h3>
+          <p>The Playwright test run has been completed. The detailed report is attached.</p>
+        attachments: |
+          playwright-report/index.html
