--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^22.10.7"
   },
   "dependencies": {
-    "dotenv": "^16.4.7"
+    "dotenv": "^16.4.7",
+    "xlsx": "^0.18.5"
   }
 }
